syntax = "proto3";

package random;

option go_package = "/api-proto";

message RandomResponse {
  string method = 1;
  string data = 2;
  bool result = 3;
}

message RandomRequest { string data = 1; }

service RandomService {
  rpc RandomGPRC(RandomRequest) returns (RandomResponse);
}
